--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,13 @@
 						<artifactId>kotlin-maven-serialization</artifactId>
 						<version>${kotlin.version}</version>
 					</dependency>
-
+<!--					https://github.com/skyscreamer/JSONassert-->
+					<dependency>
+						<groupId>org.skyscreamer</groupId>
+						<artifactId>jsonassert</artifactId>
+						<version>1.5.1</version>
+						<scope>test</scope>
+					</dependency>
 				</dependencies>
 			</plugin>
 		</plugins>
