--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # first create then update
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
