in test, h2 in memory

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,4 @@
-#spring.datasource.url=jdbc:h2:mem:sushi
-spring.datasource.url=jdbc:h2:~/db/testapisushi;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:sushi
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
