--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:sushi
-#spring.datasource.url=jdbc:h2:~/db/apisushi;AUTO_SERVER=TRUE
+#spring.datasource.url=jdbc:h2:mem:sushi
+spring.datasource.url=jdbc:h2:~/db/apisushi;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
