--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.web.resources.add-mappings=false
+
+# ne permet plus de profiter du controleur des ressources static... à corriger
+#spring.web.resources.add-mappings=false
