--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
 # ne permet plus de profiter du controleur des ressources static... à corriger
-#spring.web.resources.add-mappings=false
+spring.web.resources.add-mappings=false
