update application.properties (utf-8) et h2 in memory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:h2:mem:sushi
-spring.datasource.url=jdbc:h2:~/db/apisushi;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:sushi
+# spring.datasource.url=jdbc:h2:~/db/apisushi;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,5 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
-# ne permet plus de profiter du controleur des ressources static... à corriger
+# ne permet plus de profiter du controleur des ressources static, a corriger
 spring.web.resources.add-mappings=false
